fixed problem with scrollbarX in side_bar.css and summary.css

--- a/css/side_bar.css
+++ b/css/side_bar.css
@@ -290,6 +290,14 @@ body {
     }
 }
 
+@media (max-width: 360px) {
+    .tab{
+        max-width: 80px;
+        width: unset;
+        padding: unset;
+    }
+}
+
 @media (min-height: 1440px) {
     .side_bar{
         height: 100vh;
