--- a/css/summary.css
+++ b/css/summary.css
@@ -218,7 +218,6 @@
 .to_do_and_done_section:hover {
     cursor: pointer;
     background-color: #2A3647;
-    ;
     color: white;
 }
 
@@ -227,17 +226,15 @@
 }
 
 .to_do_and_done_section:hover #to-do-img {
-    background-image: url("../assets/img/summary-img/to-do-hover.svg");
+    background-image: url("../../assets/img/summary-img/to-do-hover.svg");
     background-color: white;
     background-color: #2A3647;
-    ;
 }
 
 .to_do_and_done_section:hover #done-img {
-    background-image: url("../assets/img/summary-img/done-hover.svg");
+    background-image: url("../../assets/img/summary-img/done-hover.svg");
     background-color: white;
     background-color: #2A3647;
-    ;
 }
 
 .to_do_and_done_content {
@@ -361,5 +358,11 @@
 
     .blue_line {
         display: block;
+    }
+}
+
+@media (max-width: 340px) {
+    .urgent{
+        gap: 4px;
     }
 }
